# XG-RAG

./: Dockerfile  README.md  launch_all.sh  pyproject.toml
app/: server.py
tests/: README.md  check.txt  test.ipynb  test.py
